--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -36,6 +36,9 @@
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
 
-@import "minimal-mistakes"; 
-@import "custom/custom"; // your overrides
+// Import Minimal Mistakes
+@import "minimal-mistakes";
+
+// Import your overrides last
+@import "custom/custom";
 
