--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,32 @@
-<div class="page__footer-follow">
-  <ul class="social-icons">
-    {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
-    {% endif %}
-
-    {% if site.footer.links %}
-      {% for link in site.footer.links %}
-        {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
-        {% endif %}
-      {% endfor %}
-    {% endif %}
-
-    {% unless site.atom_feed.hide %}
-      <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
-    {% endunless %}
-  </ul>
-</div>
-
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} <a href="{{ site.copyright_url | default: site.url }}">{{ site.copyright | default: site.title }}</a>. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="2575.2">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
+    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
+    li.li2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000e9; -webkit-text-stroke: #0000e9}
+    span.s1 {-webkit-text-stroke: 0px #000000}
+    span.s2 {font-kerning: none}
+    span.s3 {text-decoration: underline ; font-kerning: none}
+    span.s4 {text-decoration: underline ; font-kerning: none; color: #0000e9; -webkit-text-stroke: 0px #0000e9}
+    ul.ul1 {list-style-type: disc}
+  </style>
+</head>
+<body>
+<ul class="ul1">
+  <li class="li1"><span class="s1"></span><span class="s2">{% if site.data.ui-text[site.locale].follow_label %}</span></li>
+  <li class="li1"><span class="s1"><b></b></span><span class="s2"><b>{{ site.data.ui-text[site.locale].follow_label }}</b><b></b></span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">{% endif %} {% if site.footer.links %} {% for link in site.footer.links %} {% if link.label and link.url %}</span></li>
+  <li class="li2"><span class="s1"><a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%7B%20link.url%20%7D%7D"><span class="s3">{{ link.label }}</span></a></span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">{% endif %} {% endfor %} {% endif %} {% unless site.atom_feed.hide %}</span></li>
+  <li class="li2"><span class="s1"><a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%25%20if%20site.atom_feed.path%20%25%7D%7B%7B%20site.atom_feed.path%20%7D%7D%7B%25%20else%20%25%7D%7B%7B%20'/feed.xml'%20%7C%20relative_url%20%7D%7D%7B%25%20endif%20%25%7D"><span class="s3">{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</span></a></span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">{% endunless %}</span></li>
+</ul>
+<p class="p1"><span class="s2">© {{ site.time | date: '%Y' }} Xianbang Chen <a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%7B%20site.copyright_url%20%7C%20default:%20site.url%20%7D%7D"><span class="s4">{{ site.copyright | default: site.title }}</span></a>. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com/"><span class="s4">Jekyll</span></a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/"><span class="s4">Minimal Mistakes</span></a>.</span></p>
+</body>
+</html>
