--- a/_sass/custom/_custom.scss
+++ b/_sass/custom/_custom.scss
@@ -10,6 +10,6 @@ a:hover {
 .author__avatar img {
   border-radius: 0;          // Removes circle corners => box shape
   max-width: 400px;          // Adjust as desired for size
-  display: block;
+//  display: block;
   margin: 0 auto;            // Centers the image horizontally
 }
