--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     span.s1 {-webkit-text-stroke: 0px #000000}
     span.s2 {font-kerning: none}
     span.s3 {text-decoration: underline ; font-kerning: none}
-    span.s4 {text-decoration: underline ; font-kerning: none; color: #0000e3; -webkit-text-stroke: 0px #0000e3}
+    span.s4 {text-decoration: underline ; font-kerning: none; color: #0000dc; -webkit-text-stroke: 0px #0000dc}
     ul.ul1 {list-style-type: disc}
   </style>
 </head>
@@ -27,6 +27,6 @@
   <li class="li2"><span class="s1"><a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%25%20if%20site.atom_feed.path%20%25%7D%7B%7B%20site.atom_feed.path%20%7D%7D%7B%25%20else%20%25%7D%7B%7B%20'/feed.xml'%20%7C%20relative_url%20%7D%7D%7B%25%20endif%20%25%7D"><span class="s3">{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</span></a></span></li>
   <li class="li1"><span class="s1"></span><span class="s2">{% endunless %}</span></li>
 </ul>
-<p class="p1"><span class="s2">© {{ site.time | date: '%Y' “Xianbang Chen.”}}<span class="Apple-converted-space">  </span><a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%7B%20site.copyright_url%20%7C%20default:%20site.url%20%7D%7D"><span class="s4">{{ site.copyright | default: site.title }}</span></a> {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com/"><span class="s4">Jekyll</span></a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/"><span class="s4">Minimal Mistakes</span></a>.</span></p>
+<p class="p1"><span class="s2">© {{ site.time | date: '%Y'}}<span class="Apple-converted-space">  </span><a href="file:///Users/xianbangchen/Library/Mobile%20Documents/com~apple~CloudDocs/Beef/Personal_Site/xianbangchen.github.io/_includes/%7B%7B%20site.copyright_url%20%7C%20default:%20site.url%20%7D%7D"><span class="s4">{{ site.copyright | default: site.title }}</span></a> {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com/"><span class="s4">Jekyll</span></a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/"><span class="s4">Minimal Mistakes</span></a>.</span></p>
 </body>
 </html>
