--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,34 +7,21 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="2575.2">
   <style type="text/css">
-    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
-    li.li2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; min-height: 14.0px}
+    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000; min-height: 14.0px}
+    li.li2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
+    li.li3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
+    span.s1 {font-kerning: none}
+    span.s2 {-webkit-text-stroke: 0px #000000}
     ul.ul1 {list-style-type: disc}
   </style>
 </head>
 <body>
 <ul class="ul1">
-  <li class="li1">{% if site.data.ui-text[site.locale].follow_label %}</li>
-  <li class="li1"><span class="Apple-converted-space">  </span>{{ site.data.ui-text[site.locale].follow_label }}</li>
-  <li class="li1">{% endif %}</li>
-  <li class="li2"><br></li>
-  <li class="li1">{% if site.footer.links %}</li>
-  <li class="li1"><span class="Apple-converted-space">  </span>{% for link in site.footer.links %}</li>
-  <li class="li1"><span class="Apple-converted-space">    </span>{% if link.label and link.url %}</li>
-  <li class="li1"><span class="Apple-converted-space">      </span>&lt;a href="{{ link.url }}"&gt;{{ link.label }}&lt;/a&gt;</li>
-  <li class="li1"><span class="Apple-converted-space">    </span>{% endif %}</li>
-  <li class="li1"><span class="Apple-converted-space">  </span>{% endfor %}</li>
-  <li class="li1">{% endif %}</li>
-  <li class="li2"><br></li>
-  <li class="li1">{% unless site.atom_feed.hide %}</li>
-  <li class="li1"><span class="Apple-converted-space">  </span>{{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</li>
-  <li class="li1">{% endunless %}</li>
-  <li class="li2"><br></li>
-  <li class="li1">© {{ site.time | date: '%Y'}}<span class="Apple-converted-space"> </span></li>
-  <li class="li1">{{ site.copyright | default: site.title }}</li>
-  <li class="li2"><br></li>
-  <li class="li1">&lt;!-- Customize or remove the next line if you want to remove "Powered by Jekyll &amp; Minimal Mistakes" --&gt;</li>
-  <li class="li1">{{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</li>
+  <li class="li1"><span class="s1"></span><br></li>
+  <li class="li2"><span class="s2"></span><span class="s1">© {{ site.time | date: '%Y'}}<span class="Apple-converted-space"> </span></span></li>
+  <li class="li2"><span class="s2"></span><span class="s1">{{ site.copyright | default: site.title }}</span></li>
+  <li class="li3"></li>
+  <li class="li2"><span class="s2"></span><span class="s1">{{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</span></li>
 </ul>
 </body>
 </html>
