--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 <body>
 <ul class="ul1">
   <li class="li1"><span class="s1"></span><br></li>
-  <li class="li2"><span class="s2"></span><span class="s1">© {{ site.time | date: '%Y'}}<span class="Apple-converted-space"> </span></span></li>
+  <li class="li2"><span class="s2"></span><span class="s1">© Xianbang Chen {{ site.time | date: '%Y'}}<span class="Apple-converted-space"> </span></span></li>
   <li class="li2"><span class="s2"></span><span class="s1">{{ site.copyright | default: site.title }}</span></li>
   <li class="li3"></li>
   <li class="li2"><span class="s2"></span><span class="s1">{{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</span></li>
