--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,8 +15,7 @@
 </head>
 <body>
 <ul class="ul1">
-  <li class="li1"><span class="s1"></span><span class="s2">© Xianbang Chen {{ site.time | date: '%Y'}}<span class="Apple-converted-space"> </span></span></li>
-  <li class="li1"><span class="s1"></span><span class="s2">{{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</span></li>
+  <li class="li1"><span class="s1"></span><span class="s2">© Xianbang Chen {{ site.time | date: ‘%Y’}}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</span></li>
 </ul>
 </body>
 </html>
