--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,15 +7,14 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="2575.2">
   <style type="text/css">
-    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    span.s1 {-webkit-text-stroke: 0px #000000}
-    span.s2 {font-kerning: none}
+    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
     ul.ul1 {list-style-type: disc}
   </style>
 </head>
 <body>
 <ul class="ul1">
-  <li class="li1"><span class="s1"></span><span class="s2">© Xianbang Chen {{ site.time | date: ‘%Y’}}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</span></li>
+  <li class="li1">© Xianbang Chen {{ site.time | date: '%Y' }}.<span class="Apple-converted-space"> </span></li>
+  <li class="li1">{{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} Jekyll &amp; Minimal Mistakes.</li>
 </ul>
 </body>
 </html>
